fix(css): extended tooltip sizing on firefox
Refs: 148e878

--- a/less/tooltips.less
+++ b/less/tooltips.less
@@ -5,7 +5,7 @@
 
   &.extended {
     display: grid;
-    grid-template-columns: 5fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(4, min-content);
     gap: 0 0.5em;
 
     max-width: unset;
